adding reddit filter and converter

--- a/web_scraping/reddit/scraping.ipynb
+++ b/web_scraping/reddit/scraping.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "redditIds = [\"8z23sa\"] \n",
+    "redditIds = [\"15su449\"] \n",
     "comment_data = [] "
    ]
   },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -185,121 +185,121 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Meanwhile random Ronaldinho on the drums becau...</td>\n",
+       "      <td>Probably a mixture of factors. 1) our media is...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Lloris has a bet on for 4-2</td>\n",
+       "      <td>For the same reason that one of the post popul...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>[deleted]</td>\n",
+       "      <td>They made enemies with half the world for cent...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>I'll never understand while fuckery like kicki...</td>\n",
+       "      <td>The home nations just have England because its...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Imagine the biggest game in the world not bein...</td>\n",
+       "      <td>•Very egotistical media\\n\\n•Notorious fans\\n\\n...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Lmao, the Telemundo commentators: \"I don't kno...</td>\n",
+       "      <td>Whenever I hear someone bashing England, it’s ...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Croatia is definitely playing like it’s the on...</td>\n",
+       "      <td>English \"fans\" destroyed the center of my town...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>FIFA has unlimited money and yet I can't think...</td>\n",
+       "      <td>Because people don’t read Spanish media which ...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>First step of Croatian master plan accomplishe...</td>\n",
+       "      <td>In 1995 England came over to Ireland to play a...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Again, for sheer entertainment, this is the be...</td>\n",
+       "      <td>Well, they did used to own a quarter of the wo...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>ooh look lloris learned</td>\n",
+       "      <td>Hate is strong I don't hate them</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>At the end we didn’t have anything to lose in ...</td>\n",
+       "      <td>Brazilian here... \\n\\nEven though you are righ...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>Lloris: Not falling for that again</td>\n",
+       "      <td>No one likes us, we dont care.</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>Gotta give it to our president - only girl on ...</td>\n",
+       "      <td>99% of English people I’ve met are absolutely ...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Reddit crashed and rolled like Neymar for 5 mi...</td>\n",
+       "      <td>It don't matter if English never qualified aga...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>Fuck it, they won it in my hearth.\\n\\nCongratz...</td>\n",
+       "      <td>Honestly I think other countries just like to ...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>The game within the game: Will the mods sticky...</td>\n",
+       "      <td>They hate us coz they aint us</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>[deleted]</td>\n",
+       "      <td>Contrary to other comments, i believe a lot of...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>goddamnit and next will be maradona coming in ...</td>\n",
+       "      <td>For me, it's because if you added up their ind...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>Never go 1-0 up against croatia</td>\n",
+       "      <td>Salty crybabies that can't handle the English ...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
@@ -309,29 +309,29 @@
       ],
       "text/plain": [
        "                                              Comment label  source\n",
-       "0   Meanwhile random Ronaldinho on the drums becau...        reddit\n",
-       "1                         Lloris has a bet on for 4-2        reddit\n",
-       "2                                           [deleted]        reddit\n",
-       "3   I'll never understand while fuckery like kicki...        reddit\n",
-       "4   Imagine the biggest game in the world not bein...        reddit\n",
-       "5   Lmao, the Telemundo commentators: \"I don't kno...        reddit\n",
-       "6   Croatia is definitely playing like it’s the on...        reddit\n",
-       "7   FIFA has unlimited money and yet I can't think...        reddit\n",
-       "8   First step of Croatian master plan accomplishe...        reddit\n",
-       "9   Again, for sheer entertainment, this is the be...        reddit\n",
-       "10                            ooh look lloris learned        reddit\n",
-       "11  At the end we didn’t have anything to lose in ...        reddit\n",
-       "12                Lloris: Not falling for that again         reddit\n",
-       "13  Gotta give it to our president - only girl on ...        reddit\n",
-       "14  Reddit crashed and rolled like Neymar for 5 mi...        reddit\n",
-       "15  Fuck it, they won it in my hearth.\\n\\nCongratz...        reddit\n",
-       "16  The game within the game: Will the mods sticky...        reddit\n",
-       "17                                          [deleted]        reddit\n",
-       "18  goddamnit and next will be maradona coming in ...        reddit\n",
-       "19                    Never go 1-0 up against croatia        reddit"
+       "0   Probably a mixture of factors. 1) our media is...        reddit\n",
+       "1   For the same reason that one of the post popul...        reddit\n",
+       "2   They made enemies with half the world for cent...        reddit\n",
+       "3   The home nations just have England because its...        reddit\n",
+       "4   •Very egotistical media\\n\\n•Notorious fans\\n\\n...        reddit\n",
+       "5   Whenever I hear someone bashing England, it’s ...        reddit\n",
+       "6   English \"fans\" destroyed the center of my town...        reddit\n",
+       "7   Because people don’t read Spanish media which ...        reddit\n",
+       "8   In 1995 England came over to Ireland to play a...        reddit\n",
+       "9   Well, they did used to own a quarter of the wo...        reddit\n",
+       "10                   Hate is strong I don't hate them        reddit\n",
+       "11  Brazilian here... \\n\\nEven though you are righ...        reddit\n",
+       "12                     No one likes us, we dont care.        reddit\n",
+       "13  99% of English people I’ve met are absolutely ...        reddit\n",
+       "14  It don't matter if English never qualified aga...        reddit\n",
+       "15  Honestly I think other countries just like to ...        reddit\n",
+       "16                      They hate us coz they aint us        reddit\n",
+       "17  Contrary to other comments, i believe a lot of...        reddit\n",
+       "18  For me, it's because if you added up their ind...        reddit\n",
+       "19  Salty crybabies that can't handle the English ...        reddit"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
