changes in comments

--- a/data_cleaning/reddit/reddit_cleaning.ipynb
+++ b/data_cleaning/reddit/reddit_cleaning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This line of code imports the pandas library and makes it accessible in the script. Pandas is a powerful library in Python used for data manipulation and analysis, particularly with structured data like tables."
+    "This line of code imports the pandas library."
    ]
   },
   {
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "This code opens a CSV file located at the specified path and reads its contents into a pandas DataFrame named df. The CSV file is read with semicolon (';') as the delimiter."
+    "This code opens a CSV file and reads its contents into a pandas DataFrame named df. The CSV file is read with semicolon (';') as the delimiter."
    ]
   },
   {
