changes in cleaning and scraping

--- a/data_cleaning/reddit/reddit_cleaning.ipynb
+++ b/data_cleaning/reddit/reddit_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1435, 3)\n"
+      "(1559, 3)\n"
      ]
     },
     {
@@ -151,7 +151,7 @@
        "9  German here. Love this team, but WTF Brasilia,...    NaN  reddit"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1431, 3)\n"
+      "(1555, 3)\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1412, 3)\n"
+      "(1527, 3)\n"
      ]
     }
    ],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,14 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1374, 3)\n"
+      "(1487, 3)\n"
      ]
     }
    ],
@@ -289,12 +289,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#with pd.ExcelWriter('reddit_cleaned_for_label_NEW.xlsx', engine='xlsxwriter') as writer:\n",
-    "#    df.to_excel(writer, index=False)"
+    "with pd.ExcelWriter('reddit_cleaned_for_label_NEW.xlsx', engine='xlsxwriter') as writer:\n",
+    "    df.to_excel(writer, index=False)"
    ]
   }
  ],
