--- a/web_scraping/reddit/scraping.ipynb
+++ b/web_scraping/reddit/scraping.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "redditIds = [\"15su449\"] \n",
+    "redditIds = [\"26symy\"] \n",
     "comment_data = [] "
    ]
   },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -185,121 +185,121 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Probably a mixture of factors. 1) our media is...</td>\n",
+       "      <td>Haha - Van Bommel yellow in the 2nd minute. Ty...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>For the same reason that one of the post popul...</td>\n",
+       "      <td>[This picture sums it up](http://scchiang.smug...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>They made enemies with half the world for cent...</td>\n",
+       "      <td>The Battle of Nuremberg</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>The home nations just have England because its...</td>\n",
+       "      <td>Haha love this match. I don't know what's more...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>•Very egotistical media\\n\\n•Notorious fans\\n\\n...</td>\n",
+       "      <td>I remember watching that game live. Afterwards...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Whenever I hear someone bashing England, it’s ...</td>\n",
+       "      <td>Those Portugal kits are beautiful.</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>English \"fans\" destroyed the center of my town...</td>\n",
+       "      <td>[deleted]</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Because people don’t read Spanish media which ...</td>\n",
+       "      <td>Terrible game, great entertainment. I couldn't...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>In 1995 England came over to Ireland to play a...</td>\n",
+       "      <td>[deleted]</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Well, they did used to own a quarter of the wo...</td>\n",
+       "      <td>Damn, if Van Bommel wasn't on my team I would ...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>Hate is strong I don't hate them</td>\n",
+       "      <td>Overshadowed in this game was that the goal wa...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Brazilian here... \\n\\nEven though you are righ...</td>\n",
+       "      <td>Amazing game, one of the highlights of the tou...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>No one likes us, we dont care.</td>\n",
+       "      <td>i kind of feel ashamed but .... Best. Game. Ever</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>99% of English people I’ve met are absolutely ...</td>\n",
+       "      <td>Somewhat surprising, in the build up towards t...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>It don't matter if English never qualified aga...</td>\n",
+       "      <td>Man, almost forgot how fucking awesome this ma...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>Honestly I think other countries just like to ...</td>\n",
+       "      <td>What do you want? Theres centuries of history ...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>They hate us coz they aint us</td>\n",
+       "      <td>Ref had a field day that game</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>Contrary to other comments, i believe a lot of...</td>\n",
+       "      <td>One of the worst and most entertaining games I...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>For me, it's because if you added up their ind...</td>\n",
+       "      <td>could have been worse, we could have lost **th...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>Salty crybabies that can't handle the English ...</td>\n",
+       "      <td>What a game!</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
@@ -309,29 +309,29 @@
       ],
       "text/plain": [
        "                                              Comment label  source\n",
-       "0   Probably a mixture of factors. 1) our media is...        reddit\n",
-       "1   For the same reason that one of the post popul...        reddit\n",
-       "2   They made enemies with half the world for cent...        reddit\n",
-       "3   The home nations just have England because its...        reddit\n",
-       "4   •Very egotistical media\\n\\n•Notorious fans\\n\\n...        reddit\n",
-       "5   Whenever I hear someone bashing England, it’s ...        reddit\n",
-       "6   English \"fans\" destroyed the center of my town...        reddit\n",
-       "7   Because people don’t read Spanish media which ...        reddit\n",
-       "8   In 1995 England came over to Ireland to play a...        reddit\n",
-       "9   Well, they did used to own a quarter of the wo...        reddit\n",
-       "10                   Hate is strong I don't hate them        reddit\n",
-       "11  Brazilian here... \\n\\nEven though you are righ...        reddit\n",
-       "12                     No one likes us, we dont care.        reddit\n",
-       "13  99% of English people I’ve met are absolutely ...        reddit\n",
-       "14  It don't matter if English never qualified aga...        reddit\n",
-       "15  Honestly I think other countries just like to ...        reddit\n",
-       "16                      They hate us coz they aint us        reddit\n",
-       "17  Contrary to other comments, i believe a lot of...        reddit\n",
-       "18  For me, it's because if you added up their ind...        reddit\n",
-       "19  Salty crybabies that can't handle the English ...        reddit"
+       "0   Haha - Van Bommel yellow in the 2nd minute. Ty...        reddit\n",
+       "1   [This picture sums it up](http://scchiang.smug...        reddit\n",
+       "2                             The Battle of Nuremberg        reddit\n",
+       "3   Haha love this match. I don't know what's more...        reddit\n",
+       "4   I remember watching that game live. Afterwards...        reddit\n",
+       "5                  Those Portugal kits are beautiful.        reddit\n",
+       "6                                           [deleted]        reddit\n",
+       "7   Terrible game, great entertainment. I couldn't...        reddit\n",
+       "8                                           [deleted]        reddit\n",
+       "9   Damn, if Van Bommel wasn't on my team I would ...        reddit\n",
+       "10  Overshadowed in this game was that the goal wa...        reddit\n",
+       "11  Amazing game, one of the highlights of the tou...        reddit\n",
+       "12  i kind of feel ashamed but .... Best. Game. Ever         reddit\n",
+       "13  Somewhat surprising, in the build up towards t...        reddit\n",
+       "14  Man, almost forgot how fucking awesome this ma...        reddit\n",
+       "15  What do you want? Theres centuries of history ...        reddit\n",
+       "16                      Ref had a field day that game        reddit\n",
+       "17  One of the worst and most entertaining games I...        reddit\n",
+       "18  could have been worse, we could have lost **th...        reddit\n",
+       "19                                       What a game!        reddit"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
