adding data_analysis

--- a/web_scraping/reddit/scraping.ipynb
+++ b/web_scraping/reddit/scraping.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "redditIds = [\"26symy\"] \n",
+    "redditIds = [\"\"] \n",
     "comment_data = [] "
    ]
   },
@@ -57,7 +57,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "This code iterates through each Reddit post ID in the redditIds list. For each post ID, it retrieves the corresponding Reddit post and its comments. It collects comments with fewer than 80 words into the comment_data list, limiting the total number of comments to 200 (comment_limit). Once the limit is reached, the loop terminates early to avoid collecting additional comments beyond the limit."
+    "This code iterates through each Reddit post ID in the redditIds list. For each post ID, it retrieves the corresponding Reddit post and its comments. It collects comments with fewer than 80 words into the comment_data list, limiting the total number of comments to 300 here (comment_limit). Once the limit is reached, the loop terminates early to avoid collecting additional comments beyond the limit."
    ]
   },
   {
