--- a/web_scraping/youtube/dataScrapeFromYoutube.ipynb
+++ b/web_scraping/youtube/dataScrapeFromYoutube.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import googleapiclient.discovery #\"conda install -c conda-forge google-api-python-client\"\n",
+    "import googleapiclient.discovery \n",
     "import googleapiclient.errors\n",
     "import pandas as pd"
    ]
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "videoID = \"sGmDkh9muzw\"\n",
+    "videoID = \"\"\n",
     "\n",
     "\n",
     "with open(r\"videos_used.txt\", \"a\") as file:\n",
@@ -43,25 +43,9 @@
     "    part = \"snippet\",\n",
     "    videoId= videoID,\n",
     "    maxResults = 100\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 301,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "response = request.execute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 302,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "comments = []"
    ]
   },
   {
@@ -70,6 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "comments = []\n",
+    "\n",
     "for item in response['items']:\n",
     "  comments.append(item['snippet']['topLevelComment']['snippet']['textDisplay'])"
    ]
