finished own model

--- a/Own_model/own_model.ipynb
+++ b/Own_model/own_model.ipynb
@@ -9,14 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
     "#general packages for data manipulation\n",
-    "import os\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "#visualizations\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -32,14 +30,8 @@
     "warnings.filterwarnings(action='ignore',category=DeprecationWarning)\n",
     "warnings.filterwarnings(action='ignore',category=FutureWarning)\n",
     "#text preprocessing libraries\n",
-    "import nltk\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "from nltk.tokenize import sent_tokenize\n",
     "from nltk.tokenize import WordPunctTokenizer\n",
-    "from nltk.tokenize import TweetTokenizer\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "from nltk.stem import PorterStemmer\n",
     "#import texthero\n",
     "#import texthero as hero\n",
     "#regular expressions\n",
@@ -57,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +225,7 @@
        "943   How often does Darren Fletcher say And theres ...  youtube      0"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +350,7 @@
        "1861  [awakenbeerus, is, a, true, sports, savant, hi...  youtube      0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +446,7 @@
        "943      [often, darren, fletcher, say, theres, chance]  youtube      0"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +676,7 @@
        "943             often darren fletcher say theres chance  youtube      0"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -952,15 +944,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\proth\\.conda\\envs\\NLP4B_Project\\lib\\site-packages\\sklearn\\model_selection\\_search.py:307: UserWarning: The total space of parameters 72 is smaller than n_iter=500. Running 72 iterations. For exhaustive searches, use GridSearchCV.\n",
-      "  warnings.warn(\n",
+      "c:\\Users\\proth\\.conda\\envs\\NLP4B_Project\\lib\\site-packages\\sklearn\\model_selection\\_search.py:307: UserWarning: The total space of parameters 72 is smaller than n_iter=100. Running 72 iterations. For exhaustive searches, use GridSearchCV.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "c:\\Users\\proth\\.conda\\envs\\NLP4B_Project\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:425: FitFailedWarning: \n",
       "400 fits failed out of a total of 720.\n",
       "The score on these train-test partitions for these parameters will be set to nan.\n",
@@ -1042,8 +1040,8 @@
       "        nan        nan 0.68218502 0.77639479 0.77639479 0.7770819\n",
       "        nan        nan        nan        nan        nan 0.78575769\n",
       " 0.77834377 0.77834377 0.77676333        nan        nan        nan\n",
-      "        nan        nan 0.79326932 0.78022086 0.78022086 0.77947665\n",
-      "        nan        nan        nan        nan        nan 0.7750047\n",
+      "        nan        nan 0.79446124 0.78022086 0.78022086 0.77947665\n",
+      "        nan        nan        nan        nan        nan 0.77651693\n",
       " 0.76545257 0.76545257 0.76545257        nan        nan        nan]\n",
       "  warnings.warn(\n",
       "c:\\Users\\proth\\.conda\\envs\\NLP4B_Project\\lib\\site-packages\\sklearn\\svm\\_base.py:1242: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
@@ -1064,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1115,18 +1113,26 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.92      0.96      0.94       355\n",
-      "           1       0.86      0.76      0.81       125\n",
+      "           1       0.86      0.75      0.80       125\n",
       "\n",
-      "    accuracy                           0.91       480\n",
-      "   macro avg       0.89      0.86      0.87       480\n",
-      "weighted avg       0.90      0.91      0.90       480\n",
+      "    accuracy                           0.90       480\n",
+      "   macro avg       0.89      0.85      0.87       480\n",
+      "weighted avg       0.90      0.90      0.90       480\n",
       "\n",
       "Train Confusion Matrix\n",
       "[[1352    0]\n",
       " [   4  562]]\n",
       "Test Confusion Matrix\n",
       "[[340  15]\n",
-      " [ 30  95]]\n"
+      " [ 31  94]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\proth\\.conda\\envs\\NLP4B_Project\\lib\\site-packages\\sklearn\\svm\\_base.py:1242: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -1158,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1262,8 +1268,8 @@
       "        nan        nan 0.45570963 0.45570963 0.45570963 0.45570963\n",
       "        nan        nan        nan        nan        nan 0.74729918\n",
       " 0.6332103  0.6332103  0.6328635         nan        nan        nan\n",
-      "        nan        nan 0.77090563 0.75111236 0.75111236 0.75111236\n",
-      "        nan        nan        nan        nan        nan 0.7014681\n",
+      "        nan        nan 0.77094741 0.75111236 0.75111236 0.75111236\n",
+      "        nan        nan        nan        nan        nan 0.69866373\n",
       " 0.72952636 0.72891991 0.73058737        nan        nan        nan]\n",
       "  warnings.warn(\n"
      ]
@@ -1292,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -1312,12 +1318,12 @@
       "Test Classification Report\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.92      0.94      0.93       355\n",
-      "           1       0.83      0.76      0.79       125\n",
+      "           0       0.93      0.94      0.93       355\n",
+      "           1       0.82      0.78      0.80       125\n",
       "\n",
       "    accuracy                           0.90       480\n",
-      "   macro avg       0.87      0.85      0.86       480\n",
-      "weighted avg       0.89      0.90      0.89       480\n",
+      "   macro avg       0.87      0.86      0.87       480\n",
+      "weighted avg       0.90      0.90      0.90       480\n",
       "\n"
      ]
     }
@@ -1340,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -1351,8 +1357,8 @@
       "[[1352    0]\n",
       " [   4  562]]\n",
       "Test Confusion Matrix\n",
-      "[[335  20]\n",
-      " [ 30  95]]\n"
+      "[[333  22]\n",
+      " [ 27  98]]\n"
      ]
     }
    ],
